welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: ambiguous reference to overloaded definition,
both method move in class Program of type (nbPas: Int, versLAvant: Boolean)Unit
and  method move in class Program of type (nbPas: Int, versLAvant: Boolean)Unit
match argument types (Int,Boolean)
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:10: error: method move is defined twice
  conflicting symbols both originated in file 'plm.runtime21.Program'
def move(nbPas: Int,versLAvant:Boolean) {
    ^